--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:bradleysqldb.database.windows.net,1433;Initial Catalog=taskplanner-db;Persist Security Info=False;User ID=bradleyadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:bradleysqldb.database.windows.net,1433;Initial Catalog=taskplanner-db;Persist Security Info=False;User ID=bradleyadmin;Password=@kInyG4Zu!%P;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
