New API version includes Category and TaskItem models along with DTOs for those objects. NEw enpoints added for all CRUD operations on these new models. Added secrets.json to store SQL connection string and included in the gitignore.

--- a/TaskPlannerApi.csproj
+++ b/TaskPlannerApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <StartupObject></StartupObject>
+    <UserSecretsId>75cc2288-4011-498c-ad9f-016d36d522eb</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +17,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
